# nexus_local

./: .gitignore  Cargo.toml  DOCKERFILE.tauri  README.md
.github/workflows/: build.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: cli_e2e.rs  cli_index.rs  cli_smoke.rs  ocr_integration.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/embed/: Cargo.toml  README.md
crates/embed/src/: lib.rs
crates/embed/tests/: embed_stub.rs  embedder_test.rs
crates/nexus_core/: Cargo.toml  README.md
crates/nexus_core/src/: config.rs  lib.rs  service.rs  watch.rs
crates/nexus_core/tests/: discovery.rs
crates/ocr/: Cargo.toml  README.md
crates/ocr/src/: lib.rs
crates/ocr/tests/: ocr_image.rs  ocr_pdf.rs  plain_text.rs
crates/search/: Cargo.toml  README.md
crates/search/src/: lib.rs
crates/search/tests/: search_stub.rs
crates/store/: Cargo.toml  README.md
crates/store/src/: lexical.rs  lib.rs  state.rs
crates/store/tests/: store_stub.rs  store_test.rs
test_dir/: test2.txt  test3.txt  test4.txt  test5.txt
ui/: README.md  TROUBLESHOOTING.md  index.html  install-deps.sh  package.json  pnpm-lock.yaml
ui/src/: App.vue
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
