[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus_core = { path = "../nexus_core" }
ocr = { path = "../ocr" }
embed = { path = "../embed" }
store = { path = "../store" }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.37", features = ["full"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
serde_json = "1.0"
sysinfo = "0.32"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tokio = { version = "1.37", features = ["full"] }
