[package]
name = "nexus_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
walkdir = "2.4"
sysinfo = "0.32"
rayon = "1.10"
ocr = { path = "../ocr" }
store = { path = "../store" }

[dev-dependencies]
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
ocr = { path = "../ocr" }
embed = { path = "../embed" }
