[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.37", features = ["full"] }
