[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
lancedb = "0.23"
arrow-array = "56"
arrow-schema = "56"
tokio = { version = "1.37", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.24"

[dev-dependencies]
tokio = { version = "1.37", features = ["full"] }
tempfile = "3.10"
