[package]
name = "nexus-ui"
version = "0.1.0"
description = "Nexus Local - Desktop UI"
authors = ["you"]
edition = "2021"

[lib]
name = "nexus_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
sysinfo = "0.32"
shellexpand = "3.1.1"
dirs = "5"

# Nexus Local crates
nexus_core = { path = "../../crates/nexus_core" }
ocr = { path = "../../crates/ocr" }
embed = { path = "../../crates/embed" }
store = { path = "../../crates/store" }

